--- a/index.css
+++ b/index.css
@@ -1,21 +1,20 @@
 ul {
-  display: flex;
-  flex-flow: row wrap;
   list-style: none;
-  padding: 0;
+  padding-left: 0;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+  grid-auto-rows: 25rem;
+  gap: 1ch;
 }
 
 li {
-  flex: 1 1 300px;
-  max-height: 200px;
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  overflow: auto;
+  border: 1px solid black;
+  padding: 1rem;
+
+  overflow-y: auto;
 }
 
-li img {
+img {
   max-width: 100%;
-  max-height: 30%;
 }
